# trading_signal

./: .gitignore  Home.py  README.md  bitcoin_predictor.py  bitcoin_regression_analysis.py  logfile.txt  main.py  pyproject.toml  report analysis.txt  reportanalysis.txt  testing_file.ipynb
.github/workflows/: daily-trading-updates.yml
.ipynb_checkpoints/: main-checkpoint.py  pyproject-checkpoint.toml  testing_file-checkpoint.ipynb
pages/: 10_fetch_mvrv.py  11_fetch_tether_data.py  12_fetch_transactions.py  13_fear_greed.py  14_fetch_gspc.py  14_gspc.py  15_get_fifty_weeks.py  1_calculate_bollinger_bands.py  2_calculate_ema.py  3_calculate_ma.py  4_calculate_macd.py  5_calculate_rsi.py  6_fetch_bitcoin_price.py  7_fetch_cmc_data.py  8_fetch_data.py  9_fetch_eth_price.py  fetch_bitcoin_price.py
technical_indicators/: bitcoin_closing_prices.py  bitcoin_ema.py  bitcoin_fifty_week.py  bitcoin_transactions_volume.py  bollinger_bands.py  btc_moving_averages.py  cmc_data.py  cpi_data.py  ethereum_closing_prices.py  fear_greed.py  macd.py  mvrv_score.py  others_dominance.py  rsi.py  sp_500.py  tether_data.py  total_three_divided_btc.py
technical_indicators/.ipynb_checkpoints/: bitcoin_closing_prices-checkpoint.py  bitcoin_ema-checkpoint.py  bitcoin_transactions_volume-checkpoint.py  btc_moving_averages-checkpoint.py
