[project]
name = "trading-signal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "google>=3.0.0",
  "google-auth>=2.40.3",
  "google-cloud-bigquery>=3.34.0",
  "google-cloud-bigquery-storage>=2.32.0",
  "jupyter>=1.1.1",
  "notebook>=7.4.5",
  "numpy>=2.3.1",
  "pandas>=2.3.0",
  "pandas-gbq>=0.29.1",
  "pip>=25.2",
  "requests>=2.32.4",
  "scikit-learn>=1.7.1",
  "statsmodels>=0.14.5",
  "typing>=3.10.0.0",
  "xgboost>=3.0.4",
]
